# pamixer

./: .gitignore  .travis.yml  Makefile  PKGBUILD  README  README.md  README.rst  callbacks.hh  device.cc  device.hh  meson.build  pamixer.1  pamixer.cc  pulseaudio.cc  pulseaudio.hh
archlinux/pamixer/: PKGBUILD
archlinux/pamixer-git/: PKGBUILD
debian/: changelog  control  copyright  pamixer.manpages  rules
src/: basic-info.cc  basic-info.hh  callbacks.cc  callbacks.hh  device.cc  device.hh  pamixer.cc  pulseaudio.cc  pulseaudio.hh  sink-input.cc  sink-input.hh  stream.cc  stream.hh
